openshift/dc.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: authsvc
  name: authsvc
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: authsvc
    deploymentconfig: authsvc
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: authsvc
        deploymentconfig: authsvc
    spec:
      containers:
      - image: docker-registry.default.svc:5000/tieto-poc-3scale-2/authsvc2@sha256:769abd67cca50212cb589e9556ff9fd4e74780c00b95af111093161fb6f01e14
        imagePullPolicy: Always
        name: authsvc
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: config-volume
          mountPath: /auth-config.edn
          subPath: auth-config.edn
      volumes:
        - name: config-volume
          configMap:
            name: authsvc-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - authsvc
      from:
        kind: ImageStreamTag
        name: authsvc:latest
    type: ImageChange
