openshift/authsvc.yml
apiVersion: template.openshift.io/v1
kind: Template
labels:
  template: authsvc
metadata:
  annotations:
    description: Authsvc
  name: authsvc
objects:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    labels:
      app: authsvc
    name: authsvc
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: authsvc
      deploymentconfig: authsvc
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: authsvc
          deploymentconfig: authsvc
      spec:
        containers:
        - image: authsvc:latest
          imagePullPolicy: Always
          name: authsvc
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - name: config-volume
            mountPath: /auth-config.edn
            subPath: auth-config.edn
        volumes:
          - name: config-volume
            configMap:
              name: authsvc-config
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - authsvc
        from:
          kind: ImageStreamTag
          name: authsvc:latest
      type: ImageChange
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
    labels:
      app: authsvc
    name: authsvc
  spec:
    host: authsvc-tieto-poc-3scale-2.apps.openshift.onecloud.tieto.com
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: authsvc
      weight: 100
    wildcardPolicy: None
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    labels:
      app: authsvc
    name: authsvc
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    selector:
      app: autsvc
      deploymentconfig: authsvc
    sessionAffinity: None
    type: ClusterIP
