openshift/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
  labels:
    app: authsvc
  name: authsvc
spec:
  host: authsvc-tieto-poc-3scale-2.apps.openshift.onecloud.tieto.com
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: authsvc
    weight: 100
  wildcardPolicy: None
